# Changes: * adding script tags for new js modules * changed attribute type to module for every script (js import only works, when all of the files are imported as module in the html file)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     </style>
   </head>
   <body>
-    <script type="text/javascript" src="./assets/js/main.js"></script>
+    <!-- MODULES -->
+    <script type="module" src="./assets/js/Circle.mjs"></script>
+    <script type="module" src="./assets/js/Rectangle.mjs"></script>
+    <script type="module" src="./assets/js/InputHandler.mjs"></script>
+    <script type="module" src="./assets/js/Player.mjs"></script>
+    <!-- MAIL JS MODULE -->
+    <script type="module" src="./assets/js/main.js"></script>
   </body>
 </html>
