Refactoring all files. No js modules for now! Code splitted in 5 different files now. Adaptations for new design in index.html.

--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
     </style>
   </head>
   <body>
-    <!-- MODULES -->
-    <script type="module" src="./assets/js/Circle.mjs"></script>
-    <script type="module" src="./assets/js/Rectangle.mjs"></script>
-    <script type="module" src="./assets/js/InputHandler.mjs"></script>
-    <script type="module" src="./assets/js/Player.mjs"></script>
-    <!-- MAIL JS MODULE -->
-    <script type="module" src="./assets/js/main.js"></script>
+    <!-- JS FILES -->
+    <script type="text/javascript" src="./assets/js/utils.js"></script>
+    <script type="text/javascript" src="./assets/js/game-physics.js"></script>
+    <script type="text/javascript" src="./assets/js/game-input.js"></script>
+    <script type="text/javascript" src="./assets/js/game-objects.js"></script>
+    <script type="text/javascript" src="./assets/js/game-engine.js"></script>
   </body>
 </html>
