Refactoring again. Implements unfinished collision detection.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
     <!-- JS FILES -->
     <script type="text/javascript" src="./assets/js/utils.js"></script>
-    <script type="text/javascript" src="./assets/js/game-physics.js"></script>
-    <script type="text/javascript" src="./assets/js/game-input.js"></script>
-    <script type="text/javascript" src="./assets/js/game-objects.js"></script>
-    <script type="text/javascript" src="./assets/js/game-engine.js"></script>
+    <script type="text/javascript" src="./assets/js/physics.js"></script>
+    <script type="text/javascript" src="./assets/js/controls.js"></script>
+    <script type="text/javascript" src="./assets/js/objects.js"></script>
+    <script type="text/javascript" src="./assets/js/engine.js"></script>
   </body>
 </html>
